--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>OmniPost</h1>
-    <button onclick="alert('<%= authTwitter %>')">Login Twitter</button>
+    <button onclick="window.location.replace('<%= authTwitterUrl %>')">Login Twitter</button>
 </body>
 </html>
