Add express-sessions to store sessions
FIrebase Authentication requires seperate front and back end, I'm too lazy for that rn...

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>OmniPost</h1>
+    <button onclick="window.location.replace(`/newsession`)">New Session (API Logout)</button>
     <div>
         <h3>Twitter</h3>
         <div>
