--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-center" lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>OmniPost</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/ionicons.min.css">
+    <link rel="stylesheet" href="css/Social-Icons.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h1>OmniPost</h1>
-    <button onclick="window.location.replace(`/newsession`)">New Session (API Logout)</button>
-    <div>
-        <h3>Twitter</h3>
-        <div>
-            <% if (twitterUsername ) { %>
-                <p>Logged in as <%= twitterUsername %></p>
-            <% } else { %>
-                <button onclick="window.location.replace('<%= twitterAuthUrl %>')">Login</button>
-            <% } %>
+    <div class="container" style="margin-top: 48px;">
+        <h6 class="display-1">OmniPost</h6>
+        <h1 class="display-6" style="margin-top: 60px;">Connect to your socials:</h1>
+        <div class="d-flex flex-row flex-grow-0 flex-fill justify-content-evenly align-items-center align-content-center align-self-center order-first m-auto align-items-md-center social-icons" style="height: 243px;margin: -20px;margin-top: -46px;margin-left: 26px;">
+            <p class="d-flex d-md-flex flex-column justify-content-md-end align-items-md-center" ><i class="icon ion-social-twitter" onclick="window.location.replace('<%= twitterAuthUrl %>')" style="cursor: pointer;"></i><%= twitterUsername %></p>
+            <!--<p class="d-flex d-md-flex flex-column justify-content-md-end align-items-md-center"><i class="icon ion-social-twitter"></i>Paragraph</p>
+            <p class="d-flex d-md-flex flex-column justify-content-md-end align-items-md-center"><i class="icon ion-social-twitter"></i>Paragraph</p>
+            <p class="d-flex d-md-flex flex-column justify-content-md-end align-items-md-center"><i class="icon ion-social-twitter"></i>Paragraph</p><a href="/twitter"></a>-->
         </div>
-        <% if (twitterUsername ) { %>
-            <button onclick="window.location.replace(`/tweet`)">Post Tweet</button>
+        <% if (twitterUsername !== "Connect") { %>
+            <p>Type in here the content you want to post on your socials</p><textarea style="height: 128px;width: 512px;"></textarea>
+            </div><button class="btn btn-primary" type="button" onclick="window.location.replace(`/tweet`)">Post</button>
+            </div><button class="btn btn-primary" type="button" onclick="window.location.replace(`/newsession`)">New Session (API Logout)</button>
         <% } %>
-    </div>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </html>
